--- a/nvim/.local/share/vimwiki/index.wiki
+++ b/nvim/.local/share/vimwiki/index.wiki
@@ -3,3 +3,4 @@
 =Knowledge Base=
 * [[groff|Groff]] -- Great resources to learn groff/troff.
 * [[discord-rpc|Discord RPC]] -- List of Discord RPC for various programs.
+* [[gpg|GNUPG]] -- GPG links.
