--- a/nvim/.local/share/vimwiki/birthday.wiki
+++ b/nvim/.local/share/vimwiki/birthday.wiki
@@ -5,17 +5,23 @@
 * 4 - Sanjay Pavan
 
 == February ==
+* 17 - Nishalini
 
 == March ==
 * 10 - Sanjay VG
+* 12 - Yeshwanth
 * 19 - Sreenivas
 
 == April ==
 * 1 - Lalith
 
 == May ==
+* 1 - Vetrivel
+* 3 - Nila
+* 17 - Tharshan Kritic
 
 == June ==
+* 28 - Hemrithan
 
 == July ==
 * 6 - Syed Aatif
